# migrationguard-ai

./: .env.example  .gitignore  CLEANUP_FOR_GITHUB.md  HACKATHON_SUBMISSION.md  Makefile  PRE_PUSH_CHECKLIST.md  QUICKSTART.md  README.md  VIDEO_DEMO_SCRIPT.md  alembic.ini  demo_agent_system.py  docker-compose.yml  postman_collection.json  pyproject.toml  setup.cmd
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_create_signals_hypertable.py  003_add_oversight_fields.py
config/: prometheus.yml
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApprovalCard.test.tsx  ApprovalCard.tsx  ApprovalDetailModal.tsx  Layout.test.tsx  Layout.tsx  ReasoningViewer.test.tsx  ReasoningViewer.tsx  SignalCard.test.tsx  SignalCard.tsx  SignalDetailModal.tsx
frontend/src/pages/: Approvals.tsx  Dashboard.tsx  Issues.tsx  Metrics.tsx  Settings.tsx  SignalFeed.tsx
frontend/src/services/: api.ts  mockData.ts
scripts/: check_infrastructure.py  init-db.sql  setup_infrastructure.py  simple_setup.py  test_gemini.py
src/migrationguard_ai/: __init__.py
src/migrationguard_ai/agent/: __init__.py  agent_graph.py  agent_state.py  orchestrator.py  state_persistence.py
src/migrationguard_ai/api/: app.py  dependencies.py
src/migrationguard_ai/core/: __init__.py  auth.py  circuit_breaker.py  config.py  graceful_degradation.py  logging.py  rbac.py  redaction.py  safe_mode.py  schemas.py
src/migrationguard_ai/db/: __init__.py
src/migrationguard_ai/integrations/: __init__.py  support_systems.py
src/migrationguard_ai/ml/: __init__.py
src/migrationguard_ai/services/: __init__.py  action_executor.py  alert_manager.py  (+17 more)
tests/: __init__.py  conftest.py
tests/unit/: test_action_executor.py  test_action_properties.py  test_agent_loop.py  test_alert_manager.py  test_api_json_properties.py  test_api_properties.py  test_audit_trail_properties.py  test_auth.py  test_circuit_breaker.py  test_config.py  test_database_models.py  test_decision_engine.py  test_decision_properties.py  test_error_handling_integration.py  test_error_response_properties.py  test_explainability_properties.py  test_explanation_generator.py  test_graceful_degradation.py  test_http_status_properties.py  test_logging.py  test_metrics_exporter.py  test_monitoring_properties.py  test_oversight_api.py  test_oversight_properties.py  test_pattern_detector.py  test_pattern_properties.py  test_rbac.py  test_rbac_properties.py  test_redaction.py  test_redaction_properties.py  test_root_cause_analyzer.py  test_root_cause_properties.py  test_safe_mode.py  test_signal_ingestion.py  test_signal_properties.py
(+20 files in other folders)
